# via

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-binaries.yml  ci.yml  prepare-release.yml  publish-crate.yml
docs/: daemon-architecture.md  github-app-setup.md  linear-oauth-setup.md  release-signing.md
examples/: github.toml  linear.toml
scripts/: install-release.sh  validate-daemon-socket-guard.sh
src/: app.rs  capabilities.rs  cli.rs  config.rs  config_command.rs  daemon.rs  doctor.rs  error.rs  lib.rs  login.rs  main.rs  redaction.rs  secrets.rs  skill.rs  timing.rs  tls.rs
src/auth/: github_app.rs  jwt.rs  mod.rs  oauth.rs
src/executor/: delegated.rs  mod.rs  rest.rs
src/providers/: mod.rs  onepassword.rs
tests/fixtures/: rsa-private-key.pkcs1.pem
