[package]
name = "via-cli"
version = "0.2.0"
edition = "2021"
authors = ["tee8z <tee8z@protonmail.com>"]
license = "MIT"
repository = "https://github.com/tee8z/via"
description = "Run commands and API requests with 1Password-backed credentials without exposing secrets to your shell"
keywords = ["cli", "credentials"]
categories = ["command-line-utilities"]

[lib]
name = "via"
path = "src/lib.rs"

[[bin]]
name = "via"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", default-features = false, features = ["error-context", "help", "std", "usage"] }
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "rustls-no-provider"] }
ring = { version = "0.17.14", default-features = false, features = ["std"] }
rustls = { version = "0.23.4", default-features = false, features = ["ring", "std", "tls12"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = { version = "0.3.47", default-features = false, features = ["parsing"] }
toml = { version = "1", default-features = false, features = ["parse", "serde", "std"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"
